<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.matheus.appfrutas.MainActivity" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context="com.example.matheus.appfrutas.MainActivity">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="195dp"
            android:layout_height="176dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@mipmap/ic_logo_muxi" />




        <android.support.v7.widget.AppCompatButton
            android:id="@+id/iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/colorPrimary"
            android:minWidth="64dp"
            android:text="Iniciar"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>
</ScrollView>