<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matheus.appfrutas.ActivityFrutas">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarListaFruta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ToolbarColoredBackArrow"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:elevation="4dp"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/frutas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbarListaFruta"
        android:minHeight="14dp"
        android:scrollbars="vertical" />


</RelativeLayout>
